brothaus-react/src/css/Heading.css
body {
  background-color: #222222;
  background: repeating-linear-gradient(45deg, #263413 0%, #263413 10%, #1f290f 0%, #1f290f 50%) 0/15px 15px;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.chinese {
  font-family: "ZCool Kuaile";
}

#copyright {
  color: fuchsia;
  text-align: center;
}

.english {
  font-family: "Luckiest Guy", cursive;
  font-size: 2vw;
}

#heading {
  font-family: "Luckiest Guy", cursive;
  font-size: 3vw;
}

.localization {
  font-size: 3vw;
}

.nav-item {
  cursor: pointer;
}

#nav-items {
  display: flex;
  justify-content: space-around;
  max-width: 800px;
  margin: auto;
}

.russian {
  font-family: "Neucha";
}

.code, .welcome, .weather, .localization {
  color: white;
  padding: 4px;
}

@media (max-width: 800px) {
  #nav-items {
    display: grid;
  }
  #nav-items .nav-item {
    place-self: center;
  }
  #nav-items #nav-items__weather {
    grid-column: 1;
    grid-row: 1/span 2;
  }
  #nav-items #nav-items__welcome {
    grid-column: 2;
    grid-row: 1;
  }
  #nav-items #nav-items__code {
    grid-column: 2;
    grid-row: 2;
  }
  #nav-items #nav-items__language {
    grid-column: 3;
    grid-row: 1/span 2;
  }
  #nav-items #nav-items__language .localization {
    background: #314318;
    border: 2px;
    border-radius: 100%;
    margin: 2px;
    padding: 2px;
  }
}
.title-array {
  margin: 8px;
  padding: 8px;
  border: 8px;
}

/*# sourceMappingURL=Heading.css.map */

